test/bad/expected-binding.fnl
(let 12) ; this one is never going to get more precise
